# Programing-Project-2

./: Cargo.toml
src/: display.rs  game.rs  lib.rs  main.rs  timer.rs  words.rs
tests/: game.rs  test_hangman.sh  timer.rs  words.rs
words/: words.txt
